[package]
name = "flutterwave-v3"
version = "0.1.2-alpha.1"
edition = "2021"
description = "A rust client to flutterwaveV3 API's"
repository = "https://github.com/didoloan/flutterwave-v3-rs.git"
homepage = "https://github.com/didoloan/flutterwave-v3-rs.git"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.12.12", features = ["brotli", "deflate", "gzip", "rustls-tls", "stream", "zstd", "json"] }
serde = { version="1.0.189", features=["derive"] }
validator = { version = "0.16.1", features = ["card", "derive", "phone"] }
thiserror = "1.0.57"
serde_json = "1.0.114"
chrono = { version="0.4.38", features=["serde"] }
# flutterwave-models = { package="flutterwave-v3-models", path="flutterwave-v3-models", version="0.1.3-alpha.1" }
flutterwave-models = { git="https://github.com/mealgro/flutterwave-v3-models", branch="fix-verify-meta-type", package="flutterwave-v3-models" }
openssl = { features = ["bindgen", "v111", "v110", "vendored"], version = "0.10.68" }
tokio = { version = "1.42.0", features = ["macros", "net", "rt", "test-util"] }
async_symm_crypto = "0.1.0"
serde_qs = "0.13.0"

[dev-dependencies]
dotenv = "0.15.0"
